--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chakra-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ankitbhusal.github.io",
   "dependencies": {
     "@chakra-ui/react": "^2.2.9",
     "@emotion/react": "^11.10.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
